<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true" >

    <RelativeLayout android:id="@+id/RelativeLayout01" android:background="@drawable/general_topbar_bg" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="45dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            android:src="@drawable/main_close_bottombar" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="12.0dip"
            android:paddingRight="13.0dip"
            android:textColor="@color/black"
            android:text="@string/help_title_1"
            android:textSize="25sp" />

    </RelativeLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/device_middle_bg" android:layout_above="@+id/RelativeLayout02" android:layout_below="@id/RelativeLayout01">
        <LinearLayout android:orientation="vertical" android:id="@+id/LinearLayout00" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@+id/LinearLayout01" android:paddingLeft="12.0dip" android:paddingRight="13.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:autoLink="web|email" android:textColor="@color/black" android:id="@+id/TextView01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_text_1" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/LinearLayout02" android:paddingLeft="12.0dip" android:paddingRight="13.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@+id/TextView22" android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/help_text_32" android:drawableLeft="@drawable/main_help_pressed" />
                <TextView android:id="@+id/TextView23" android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/help_text_33" android:drawableLeft="@drawable/main_add_pressed" />
                <TextView android:id="@+id/TextView24" android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/help_text_34" android:drawableLeft="@drawable/main_menu_pressed" />
                <TextView android:id="@+id/TextView25" android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/help_text_35" android:drawableLeft="@drawable/main_more_pressed01" />
                <TextView android:id="@+id/TextView21" android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/help_text_31" android:drawableLeft="@drawable/main_edit" android:drawablePadding="5.0dip" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout 
        android:id="@+id/RelativeLayout02" 
        android:background="@drawable/general_bottombar_bg"
        android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/ImageView02"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8.0dip"
            android:scaleType="fitXY"
            android:src="@drawable/main_pre_bottombar" />

        <ImageView
            android:id="@+id/ImageView03"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8.0dip"
            android:scaleType="fitXY"
            android:src="@drawable/main_next_bottombar" />

    </RelativeLayout>
</RelativeLayout>
