<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/bj" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@+id/layout_serverip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@+id/bg_homemanage" android:background="@drawable/bg_homemanage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dp" android:layout_marginTop="1.0dp" />
        <TextView android:textSize="18.0dp" android:textColor="#ffffffff" android:id="@+id/tab_homemanage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50.0dp" android:layout_marginTop="12.0dp" android:text="@string/systemsetup" />
        <Button android:textSize="16.0dp" android:textColor="#ffffffff" android:id="@+id/btn001" android:background="@drawable/itembutton_manage01" android:paddingRight="26.0dp" android:layout_width="110.0dp" android:layout_height="30.0dp" android:layout_marginLeft="40.0dp" android:layout_marginTop="70.0dp" android:text="@string/networksetting" />
        <Button android:textSize="16.0dp" android:textColor="#ffffffff" android:id="@+id/btn003" android:background="@drawable/itembutton_manage1" android:paddingRight="26.0dp" android:layout_width="110.0dp" android:layout_height="30.0dp" android:layout_marginLeft="40.0dp" android:layout_marginTop="12.0dp" android:text="@string/test1" android:layout_below="@id/btn001" />
        <Button android:textSize="16.0dp" android:textColor="#ffffffff" android:id="@+id/btn005" android:background="@drawable/itembutton_manage1" android:paddingRight="26.0dp" android:layout_width="110.0dp" android:layout_height="30.0dp" android:layout_marginLeft="40.0dp" android:layout_marginTop="12.0dp" android:text="@string/test1" android:layout_below="@id/btn003" />
        <Button android:textSize="16.0dp" android:textColor="#ffffffff" android:id="@+id/btn004" android:background="@drawable/itembutton_manage1" android:paddingRight="26.0dp" android:layout_width="110.0dp" android:layout_height="30.0dp" android:layout_marginLeft="40.0dp" android:layout_marginTop="12.0dp" android:text="@string/test1" android:layout_below="@id/btn005" />
        <Button android:textSize="16.0dp" android:textColor="#ffffffff" android:id="@+id/btn006" android:background="@drawable/itembutton_manage1" android:paddingRight="26.0dp" android:layout_width="110.0dp" android:layout_height="30.0dp" android:layout_marginLeft="40.0dp" android:layout_marginTop="12.0dp" android:text="@string/about" android:layout_below="@id/btn004" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/shezhineirong" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="180.0dp" android:layout_marginTop="0.0dp" >111</RelativeLayout>
</RelativeLayout>