<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout 
        android:id="@+id/RelativeLayout01" 
        android:background="@drawable/general_topbar_bg" 
        android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imageView01_cooker"
            android:layout_width="45dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            android:src="@drawable/main_close_bottombar" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="12.0dip"
            android:paddingRight="13.0dip"
            android:textColor="@color/black"
            android:text="@string/cooker_title_1"
            android:textSize="25sp" />

    </RelativeLayout>
    
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/cookerground"
     > 
     <LinearLayout android:layout_width="fill_parent"
         android:orientation="vertical"
         android:layout_height="0dp"
         android:layout_weight="1"
         >

         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:orientation="vertical" >

             <TextView
                 android:id="@+id/editTextIP"
                 android:layout_width="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_height="wrap_content"
                 android:text="@string/show"
                 android:textSize="30sp" />

         </LinearLayout>
         <LinearLayout android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             >
             <RelativeLayout android:layout_width="fill_parent"
                 android:layout_height="fill_parent">

             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="100dp"
                 android:textSize="20sp"
                 android:text="@string/baimi" />

             <ImageView
                 android:id="@+id/imageView5"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_toRightOf="@id/textView1"
                 android:layout_marginLeft="10dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/dark" 
                 />

             <ImageView
                 android:id="@+id/imageView4"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_toLeftOf="@+id/textView4"
                 android:layout_marginRight="10dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/dark" />

             <TextView
                 android:id="@+id/textView4"
                 android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="100dp"
                 android:textSize="20sp"
                 android:text="@string/kuaizhu" />
             </RelativeLayout>
         </LinearLayout>
         <LinearLayout android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             >
             <RelativeLayout android:layout_width="fill_parent"
                 android:layout_height="fill_parent">

             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="100dp"
                 android:textSize="20sp"
                 android:text="@string/nuomi" />

             <ImageView
                 android:id="@+id/imageView6"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_toRightOf="@id/textView2"
                 android:layout_marginLeft="10dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/dark" />

             <ImageView
                 android:id="@+id/imageView2"
				android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_toLeftOf="@+id/textView5"
                 android:layout_marginRight="10dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/dark" />

             <TextView
                 android:id="@+id/textView5"
                 android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="100dp"
                 android:textSize="20sp"
                 android:text="@string/baozaifan" />
             </RelativeLayout>
         </LinearLayout>

         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >

             <RelativeLayout android:layout_width="fill_parent"
                 android:layout_height="fill_parent">

             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="100dp"
                 android:text="@string/baotang"
                 android:textColor="@color/black"
                 android:textSize="20sp" />

             <ImageView
                 android:id="@+id/imageView1"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_toLeftOf="@+id/textView6"
                 android:layout_marginRight="10dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/dark" />

             <TextView
                 android:id="@+id/textView6"
                 android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="100dp"
                 android:textSize="20sp"
                 android:text="@string/baozhou" />

             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="32dp"
                 android:layout_toRightOf="@+id/textView3"
                 android:scaleType="fitCenter"
                 android:src="@drawable/dark" 
                 />

			</RelativeLayout>
         </LinearLayout>
			
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_marginTop="40dp"
             android:layout_height="wrap_content" >
			<RelativeLayout android:layout_width="fill_parent"
			    android:layout_height="fill_parent">
             <Button
                 android:id="@+id/button2"
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="300dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/plus" />

             <Button
                 android:id="@+id/button1"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="300dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/discrese" />
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>

     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="vertical" >

         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" >

             <ImageButton
                 android:id="@+id/imageButton1"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginLeft="86dp"
                 android:background="#00000000"
                 android:scaleType="fitEnd"
                 android:src="@drawable/model" />
             
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/imageButton1"
                 android:layout_alignLeft="@id/imageButton1"
                 android:text="@string/mode"
                 android:textSize="20sp"
                 android:textColor="@color/black" />


              <ImageButton
                 android:id="@+id/imageButton3"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginLeft="400dp"
                 android:background="#00000000"
                 android:scaleType="fitEnd"
                 android:src="@drawable/warm" />
              
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/imageButton3"
                 android:layout_alignLeft="@id/imageButton3"
                 android:text="@string/cancel_baowen"
                 android:textSize="20sp"
                 android:textColor="@color/black" />

             <ImageButton
                 android:id="@+id/imageButton2"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_alignParentRight="true"
                 android:background="#00000000"
                 android:scaleType="fitEnd"
                 android:src="@drawable/sure" />
             
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/imageButton2"
                 android:layout_alignLeft="@id/imageButton2"
                 android:text="@string/confirm"
                 android:textSize="20sp"
                 android:textColor="@color/black" />

         </RelativeLayout>

     </LinearLayout>

</LinearLayout>
    

</LinearLayout>
