<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/bj" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@+id/layout_serverip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@+id/bg_homemanage" android:background="@drawable/bg_homemanage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0.0dp" android:layout_marginTop="0.0dp" />
        <TextView android:textSize="18.0dp" android:textColor="#ffffffff" android:id="@+id/tab_homeviedo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dp" android:layout_marginTop="12.0dp" android:text="@string/viedosetup" />

        <Button
            android:id="@+id/btn001_video"
            android:layout_width="110.0dp"
            android:layout_height="28dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="65dp"
            android:background="@drawable/itembutton_manage01"
            android:paddingRight="26.0dp"
            android:text="@string/viedobtn1"
            android:textColor="#ffffffff"
            android:textSize="16.0dp" />

        <Button
            android:id="@+id/btn003_video"
            android:layout_width="110.0dp"
            android:layout_height="28dp"
            android:layout_below="@id/btn001_video"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="12.0dp"
            android:background="@drawable/itembutton_manage1"
            android:paddingRight="26.0dp"
            android:text="@string/viedobtn2"
            android:textColor="#ffffffff"
            android:textSize="16.0dp" />

        <Button
            android:id="@+id/btn005_video"
            android:layout_width="110.0dp"
            android:layout_height="28dp"
            android:layout_below="@id/btn003_video"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="12.0dp"
            android:background="@drawable/itembutton_manage1"
            android:paddingRight="26.0dp"
            android:text="@string/viedobtn3"
            android:textColor="#ffffffff"
            android:textSize="16.0dp" />

        <Button
            android:id="@+id/btn004_video"
            android:layout_width="110.0dp"
            android:layout_height="28dp"
            android:layout_below="@id/btn005_video"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="12.0dp"
            android:background="@drawable/itembutton_manage1"
            android:paddingRight="26.0dp"
            android:text="@string/viedobtn4"
            android:textColor="#ffffffff"
            android:textSize="16.0dp" />

        <Button
            android:id="@+id/btn006_video"
            android:layout_width="110.0dp"
            android:layout_height="28dp"
            android:layout_below="@id/btn004_video"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="12.0dp"
            android:background="@drawable/itembutton_manage1"
            android:paddingRight="26.0dp"
            android:text="@string/viedobtn5"
            android:textColor="#ffffffff"
            android:textSize="16.0dp" />

    </RelativeLayout>
    <RelativeLayout android:id="@+id/shezhineirong" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="160.0dp" android:layout_marginTop="0.0dp" >
		<TextView
	        android:id="@+id/homevideo_connect_tip"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="12dp"
	        android:text="频道"
	        android:textColor="#ffffffff"
	        android:textSize="19.0dp" />
	
	    <com.example.smarthome.VideoSetupActivity.VideoSetupSubActivity.SjrsSurfaceView
	        android:id="@+id/homevideo_video"
	        android:layout_width="230.0dp"
	        android:layout_height="230.0dp"
	        android:layout_marginLeft="0.0dp"
	        android:layout_marginTop="60dp"
	        android:keepScreenOn="true" />
	
	    <RelativeLayout
	        android:id="@+id/fivederect"
	        android:layout_width="110dp"
	        android:layout_height="110dp"
	        android:layout_marginLeft="10.0dp"
	        android:layout_marginTop="70dp"
	        android:layout_toRightOf="@id/homevideo_video"
	        android:background="@drawable/fivederectionbj"
	        android:orientation="vertical" >
	
	        <Button
	            android:id="@+id/up_video"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_centerHorizontal="true"
	            android:layout_marginTop="6.0dp"
	            android:background="@drawable/up_video" />
	
	        <Button
	            android:id="@+id/span_video"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerInParent="true"
	            android:background="@drawable/span_video" />
	
	        <Button
	            android:id="@+id/down_video"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentBottom="true"
	            android:layout_centerHorizontal="true"
	            android:layout_marginBottom="6.0dp"
	            android:background="@drawable/down_video" />
	
	        <Button
	            android:id="@+id/left_video"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_centerVertical="true"
	            android:layout_marginLeft="6.0dp"
	            android:background="@drawable/left_video" />
	
	        <Button
	            android:id="@+id/right_video"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
	            android:layout_marginRight="6.0dp"
	            android:background="@drawable/right_video" />
	    </RelativeLayout>
	
	    <Button
	        android:id="@+id/stop_video"
	        android:layout_width="100dp"
	        android:layout_height="30dp"
	        android:layout_below="@id/fivederect"
	        android:layout_marginLeft="15.0dp"
	        android:layout_marginTop="20dp"
	        android:layout_toRightOf="@id/homevideo_video"
	        android:background="@drawable/shortbutton"
	        android:text="@string/stop"
	        android:textColor="#ffffffff"
	        android:textSize="22.0dp" />
	</RelativeLayout>
</RelativeLayout>